--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstite With Background Video - Easy Tutorials</title>
-    <link rel="stylsheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="hero">
+        <video autoplay loop muted plays-inline class="back-video">
+            <source src="images/video.mp4" type="video/mp4">
+        </video>
+        
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="images/401-logo.png" class="logo">
             <ul>
-                <li><a href="#">Home<a></li>
-                <li><a href="#">Beaches<a></li>
-                <li><a href="#">Popular Places<a></li>
-                <li><a href="#">Contact Us<a></li>
+                <li><a href="#">HOME<a></li>
+                <li><a href="#">BEACHES<a></li>
+                <li><a href="#">POPULAR PLACES<a></li>
+                <li><a href="#">CONTACT US<a></li>
             </ul>
         </nav>
-
+        <div class="content">
+            <h1>California</h1>
+            <a href="#">Explore</a>
+        </div>
     </div>
-    
 </body>
 </html>
